# emacs

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bzlmod  aio.BUILD  async.go  async_test.go  bool.go  call.go  call_test.go  casts.go  casts_test.go  def.bzl  doc.go  emacs_test.go  env.go  error.c  error.go  error_test.go  ert.go  ert_test.go  example_test.go  export.go  export_test.go  float.c  float.go  func.c  func.go  func_test.go  gc.go  go.mod  handle_test.go  hash.go  hash_test.go  (+49 more)
.github/workflows/: bazel-test.yaml  update-lockfile.yaml
dev/: BUILD
example/: main.go
genheader/: main.go
