# Copyright 2023-2025 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "com_github_phst_emacs")

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Bogus versions added because of
# https://github.com/renovatebot/renovate/issues/33476.
# FIXME: Remove them once Renovate issue is fixed.
bazel_dep(name = "phst_rules_elisp", version = "0")
git_override(
    module_name = "phst_rules_elisp",
    commit = "f968bf8a6bdc22bfa2ada71665e9199077ab1d2a",
    remote = "https://github.com/phst/rules_elisp.git",
)

bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.nogo(nogo = "//dev:nogo")

bazel_dep(name = "phst_license_test", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_license_test",
    commit = "20a4c66cca0435cb0726976bb6b53d02537896b2",
    remote = "https://github.com/phst/license_test.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

elisp = use_extension("@phst_rules_elisp//elisp:extensions.bzl", "elisp")
elisp.http_archive(
    name = "aio",
    exclude = ["aio-contrib.el"],
    integrity = "sha384-567fZ/RmnxQmSyVrlgYdidWBVzD7alwHVvVn41YEA9Bj92pHXRlViaSaVn3Imwd9",
    strip_prefix = "emacs-aio-1.1/",
    urls = ["https://github.com/skeeto/emacs-aio/archive/refs/tags/1.1.tar.gz"],
)
use_repo(elisp, "aio")

bazel_dep(name = "phst_merge_bazel_lockfiles", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_merge_bazel_lockfiles",
    commit = "88b53f818d0a738fbf77fcd492f59603a084a4f9",
    remote = "https://github.com/phst/merge-bazel-lockfiles.git",
)
